--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Supabase Configuration
-# Copie este arquivo para .env.local e preencha com suas credenciais
-
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# Exemplo:
+# VITE_SUPABASE_URL=https://your-project-id.supabase.co
+# VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
