--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.12.7",
+    "simplemde": "^1.11.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
