--- a/package.json
+++ b/package.json
@@ -41,6 +41,12 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.56.2",
+    "@tiptap/extension-character-count": "^3.10.2",
+    "@tiptap/extension-image": "^3.10.2",
+    "@tiptap/extension-link": "^3.10.2",
+    "@tiptap/extension-text-align": "^3.10.2",
+    "@tiptap/react": "^3.10.2",
+    "@tiptap/starter-kit": "^3.10.2",
     "@types/react-dropzone": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
