--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "@tiptap/extension-character-count": "^3.10.2",
     "@tiptap/extension-image": "^3.10.2",
     "@tiptap/extension-link": "^3.10.2",
+    "@tiptap/extension-table": "^3.11.1",
+    "@tiptap/extension-table-cell": "^3.11.1",
+    "@tiptap/extension-table-header": "^3.11.1",
+    "@tiptap/extension-table-row": "^3.11.1",
     "@tiptap/extension-text-align": "^3.10.2",
     "@tiptap/html": "^3.10.3",
     "@tiptap/react": "^3.10.2",
